--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("戻る", "/") %>
+<%= link_to("戻る", "/posts") %>
 <div class="post-show">
     <div class="post-title">
         <strong>タイトル</strong>
