--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/posts) do %>
+<%= form_tag("/posts") do %>
     <div>
       <strong>タイトル</strong>
       <textarea name="title"></textarea>
