--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
     </div>
     <div class="post-content">
         <p>
-            <%= @post.content %>
+            <%= qiita_markdown(@post.content) %>
         </p>
     </div>
 </div>
